--- a/.gitignore
+++ b/.gitignore
@@ -81,7 +81,8 @@ typings/
 # Nuxt.js build / generate output
 .nuxt
 dist
-
+generated
+prisma.yml
 # Gatsby files
 .cache/
 # Comment in the public line in if your project uses Gatsby and *not* Next.js
