--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "graphql-tools": "^4.0.6",
     "graphql-yoga": "^1.18.3",
     "merge-graphql-schemas": "^1.7.3",
-    "morgan": "^1.9.1"
+    "morgan": "^1.9.1",
+    "prisma-client-lib": "^1.34.10"
   },
   "devDependencies": {
     "@babel/core": "^7.7.5",
@@ -22,6 +23,9 @@
     "nodemon": "^2.0.2"
   },
   "scripts": {
+    "deploy": "prisma deploy",
+    "generate": "prisma generate",
+    "prisma": "yarn run deploy && yarn run generate",
     "dev": "nodemon --exec babel-node src/server.js"
   }
 }
