--- a/package.json
+++ b/package.json
@@ -12,10 +12,15 @@
     "dotenv": "^8.2.0",
     "graphql-tools": "^4.0.6",
     "graphql-yoga": "^1.18.3",
+    "install": "^0.13.0",
+    "jsonwebtoken": "^8.5.1",
     "merge-graphql-schemas": "^1.7.3",
     "morgan": "^1.9.1",
     "nodemailer": "^6.4.2",
     "nodemailer-sendgrid-transport": "^0.2.0",
+    "npm": "^6.13.4",
+    "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
     "prisma-client-lib": "^1.34.10"
   },
   "devDependencies": {
