--- a/prisma.yml
+++ b/prisma.yml
@@ -1,4 +1,6 @@
-endpoint: https://us1.prisma.sh/sunjae-jeong-895707/outstargram/dev
+#endpoint: https://us1.prisma.sh/sunjae-jeong-895707/outstargram/dev
+#endpoint: https://eu1.prisma.sh/sunjae-jeong-895707/outstargram/dev
+endpoint: https://eu1.prisma.sh/sunjae-jeong-895707/outstargram/dev
 datamodel: datamodel.prisma
 
 generate:
